# JXL-Frame-Stitcher

./: .gitignore  CMakeLists.txt  README.md  jxfrstchconfig.h.cmake  jxlutils.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
cmake/: FindJPEGXL.cmake  FindLCMS2.cmake
resources/: jxlframesticthing.rc
utils/: jxldecoderobject.cpp  jxldecoderobject.h  jxlencoderobject.cpp  jxlencoderobject.h
